fixed navbar alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h1 {
 /* NAVIGATION BAR */
 
 .navbar {
-    padding-bottom: 4.5rem;;
+    padding: 0 0 4.5rem;
 }
 
 
